--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="file_name_hint">File name</string>
     <string name="record_data">Record data</string>
     <string name="title_activity_record_data">RecordDataActivity</string>
+    <string name="title_activity_future_release">FutureReleaseActivity</string>
+    <string name="hello_world">Hello World!</string>
+    <string name="were_sorry">We\'re sorry, this feature has yet to be implemented. We\'re working on getting this fixed. Check back in a future release!</string>
 </resources>
